Duplicating a transaction must not copy any match information

BUG: 426161
FIXED-IN: 5.1.3