kmymoney/views/kgloballedgerview.cpp
@@ -1531,6 +1531,7 @@ void KGlobalLedgerView::slotDuplicateTransaction(bool reverse)
                     split.setReconcileFlag(eMyMoney::Split::State::NotReconciled);
                     split.setReconcileDate(QDate());
                     split.setBankID(QString());
+                    split.removeMatch();
                 }
                 // clear invalid data
                 t.setEntryDate(QDate());
